# PDF-Chat

./: .gitignore
backend/: pyproject.toml
backend/src/backend/: db.py  main.py
backend/src/backend/models/: general.py
backend/src/backend/utils/: gcs_url_gen.py  publish.py
backend/src/helpers/: cors_setter.py
backend/src/workers/: utils.py  worker.py
frontend/src/app/: page.tsx
frontend/src/app/api/get-upload-url/: route.ts
frontend/src/app/api/notify-uploaded/: route.ts
frontend/src/app/upload/: page.tsx
